bk_ida/gccida/g1/tree_expr_nonnegative_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/tree_expr_nonnegative_p/src/fold-const.c:8112:27: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
result = truth_value_p( ( tree_code)v2) != 0; 
                          ^~~~~~~~~
                          tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/tree_expr_nonnegative_p/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/tree_expr_nonnegative_p/src/fold-const.c:8112:37: error: expected ')'
result = truth_value_p( ( tree_code)v2) != 0; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/tree_expr_nonnegative_p/src/fold-const.c:8112:23: note: to match this '('
result = truth_value_p( ( tree_code)v2) != 0; 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/tree_expr_nonnegative_p/src/obj/fold-const.o] Error 1
